Process_Management/force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Allow_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_SMS_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow SMS Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earnings__c</fullName>
        <label>Earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>